# Ai-Avatar

./: .gitignore  Makefile  README.md
backend/: .env.example  pyproject.toml  requirements.svd.txt  requirements.txt
backend/app/: __init__.py  api.py  config.py  jobs.py  main.py  models.py  state.py  tts_service.py  worker.py
backend/app/pipeline/: base.py  factory.py  mock_generator.py  sadtalker_generator.py  svd_controlnet_generator.py  svd_generator.py  tts.py  wav2lip_generator.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
