[tool.poetry]
name = "ai-video-avatar-studio-backend"
version = "0.1.0"
description = "FastAPI backend + worker for AI Video Avatar Studio"
authors = ["AI Video Avatar Studio contributors"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.110"
uvicorn = { version = ">=0.27", extras = ["standard"] }
python-multipart = ">=0.0.9"
pydantic-settings = ">=2.2"

[tool.poetry.group.svd.dependencies]
diffusers = ">=0.28.0"
transformers = ">=4.38.0,<5.0.0"
accelerate = ">=0.26.0"
safetensors = ">=0.4.2"
huggingface-hub = ">=0.20.0"
pillow = ">=10.0.0"
numpy = ">=1.24.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
